deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pocketstudio-prod
  labels:
    app.kubernetes.io/managed-by: argocd
